--- a/lab2/pom.xml
+++ b/lab2/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.bsuir.danilchican</groupId>
+  <groupId>com.bsuir.modeling</groupId>
   <artifactId>lab2</artifactId>
   <version>1.0-SNAPSHOT</version>
   <build>
